Update event card rules and effects
Modified event card rules to include additional effects and penalties.

--- a/规则书.md
+++ b/规则书.md
@@ -137,31 +137,39 @@
 
 ### 事件卡（Event Cards）
 
-事件卡共 24 张，每回合结算一次。
+事件卡共 24 张，每回合结算一次，一次两张。
 
+- **倍率**
 - 古代热潮：古代倍率 +0.5
-- 未来崩盘：未来出售倍率 -0.5
+- 前无古人：古代倍率 -0.5
+- 未来风暴：未来倍率 +0.5
+- 后无来者：未来倍率 -0.5
+- 以史为鉴：使近代倍率等于古代倍率
+- 未来回音：使近代倍率等于未来倍率
+- 两极反转：立即交换当前倍率最高与最低时代的倍率值
+- **惩罚**
 - 时空震荡：持有消耗总和最高者弃 1 件文物
-- 监管稽查：持有 ≥3 件文物者罚款 5
-- 套装风靡：结算每套装 +3 分
+- 监管稽查：持有 4 件文物者罚款 5
+- 颁布苛税：所有持有资金 >20 的玩家立即上缴 5 资金
+- 反垄断：当前持有某一时代文物最多者弃置一张对应文物到拍卖区(并列则同时惩罚)
+- **奖励**
+- 套装风靡：结算时每套装 +3 分
+- 多元主义：你的文物卡中每有一个不同的词条，你在本回合获得一个临时的VP
+- 
+- **公共事件**
 - 危机缓和：时空稳定性 +10%
+- 灾难爆发：时空稳定性 -10%
 - 市场冻结：下回合禁止倍率调整和出售
-- 通胀：公开拍卖起拍 +2
-- 通缩：本回合出售价格减半
+- 通胀：下回合公开拍卖成交价 +2
+- 通缩：下回合出售价格减半
 - 时空扭曲：每人传 1 张手牌或文物给下家
-- 新发现：从弃牌堆随机复原 1 件文物拍卖
-- 量子套利：立即交换当前倍率最高与最低时代的倍率值（若三者相同则无效）
+- 时空回溯：从弃牌堆随机复原文物填满拍卖区
 - 时间悖论：时空稳定性 <30% 时，下回合所有拍卖改为密封竞标
-- 暗箱评估：下回合所有文物卡保持背面朝上，直到成交付款后方可翻开
-- 收藏热：本回合内，所有带有【艺术】或【文化】关键字的文物，出售价格额外 +3
-- 工会罢拍：跳过下一个拍卖阶段，直接进入交易阶段
+- 暗箱操作：下回合所有文物卡保持背面朝上，直到成交付款后方可翻开
 - 安保升级：下回合的拍卖阶段，禁止使用任何功能卡
-- 追溯征税：所有持有资金 >25 的玩家立即上缴 5 资金；资金不足者无需支付
 - 连锁抛售：持有文物数量 ≥3 的玩家，必须立即选择一张文物半价出售（向下取整），或支付 5 资金
-- 伪史曝光：由下回合起始玩家指定一个时代，该时代倍率立即变为 0.5
 - 时间检修窗：下回合拍卖成交不扣减任何时空稳定性
 - 资本撤退：本回合所有拍卖的最高出价上限为 15，超过 15 的出价视为无效
-- 拍品错置：立即弃置当前拍卖区的所有文物，并从牌堆顶重新补满
 - 匿名资助：当前资金最少的玩家立即获得 10 资金（并列则平分，向下取整）
 
 ---
