Add new rules for modern era and game preparation

--- a/规则书.md
+++ b/规则书.md
@@ -144,6 +144,8 @@
 - 前无古人：古代倍率 -0.5
 - 未来风暴：未来倍率 +0.5
 - 后无来者：未来倍率 -0.5
+- 工业革命：近代倍率 +0.5
+- 智子锁定：近代倍率 -0.5
 - 以史为鉴：使近代倍率等于古代倍率
 - 未来回音：使近代倍率等于未来倍率
 - 两极反转：立即交换当前倍率最高与最低时代的倍率值
@@ -171,6 +173,8 @@
 - 时间检修窗：下回合拍卖成交不扣减任何时空稳定性
 - 资本撤退：本回合所有拍卖的最高出价上限为 15，超过 15 的出价视为无效
 - 匿名资助：当前资金最少的玩家立即获得 10 资金（并列则平分，向下取整）
+- 终局预兆：若时空稳定性 <=20%，立即额外翻开并结算一张事件卡
+- 未雨绸缪：提前揭示下回合的事件与拍品
 
 ---
 
