--- a/规则书.md
+++ b/规则书.md
@@ -137,27 +137,38 @@
 
 ### 事件卡（Event Cards）
 
-事件卡共 24 张，每回合结算一次，一次两张。
+事件卡共 48 张，每回合结算一次，一次两张。
+注：除特殊注明外，若指定的**比较类型**无法分出大小，则依次比较资金，VP，若最终无法分出
 
-- **倍率**
+- **倍率:9**
 - 古代热潮：古代倍率 +0.5
 - 前无古人：古代倍率 -0.5
 - 未来风暴：未来倍率 +0.5
 - 后无来者：未来倍率 -0.5
-- 工业革命：近代倍率 +0.5
+- 技术复兴：近代倍率 +0.5
 - 智子锁定：近代倍率 -0.5
 - 以史为鉴：使近代倍率等于古代倍率
 - 未来回音：使近代倍率等于未来倍率
 - 两极反转：立即交换当前倍率最高与最低时代的倍率值
-- **惩罚**
+- **惩罚:12**
 - 时空震荡：持有消耗总和最高者弃 1 件文物
-- 监管稽查：持有 4 件文物者罚款 5
-- 颁布苛税：所有持有资金 >20 的玩家立即上缴 5 资金
-- 反垄断：当前持有某一时代文物最多者弃置一张对应文物到拍卖区(并列则同时惩罚)
+- 市场监管令：持有 4 件文物者罚款 5 资金
+- 颁布苛税：所有持有资金 >20 的玩家罚款 5 资金
+- 缉私警察：持有价值为 8 的文物的玩家罚款 5 资金
+- 制裁寡头：拥有最多VP的玩家罚款 5 资金
+- 旱地行舟：拥有最多金币的玩家下回合拍卖环节最高出价为 8
+- 焚书坑儒：持有古代文物最多的玩家罚款 5 资金
+- 地心伪说：持有近代文物最多的玩家罚款 5 资金
+- 威慑失效：持有未来文物最多的玩家罚款 5 资金
+- 大革命：持有最高价值古代文物的玩家罚款 5 资金
+- 达尔文事变：持有最高价值近代文物的玩家罚款 5 资金
+- 水滴：持有最高价值未来文物的玩家罚款 5 资金
 - **奖励**
-- 套装风靡：结算时每套装 +3 分
+- 环保主义：持有消耗总和最低者若手牌未满，可在系统仓库以文物原价值选择并购买一张文物
 - 多元主义：你的文物卡中每有一个不同的词条，你在本回合获得一个临时的VP
-- 
+- 千秋稽首：持有古代文物最多的玩家代替本轮投票发起者
+- 2000：持有近代文物最多的玩家
+- 黑暗森林：持有未来文物最多的玩家立即进行下一轮挖掘，在查看挖掘结果后可以选择是否将文物反盖
 - **公共事件**
 - 危机缓和：时空稳定性 +10%
 - 灾难爆发：时空稳定性 -10%
