Expand function and event cards in rules
Add new function cards and event cards with detailed effects.

--- a/规则书.md
+++ b/规则书.md
@@ -110,60 +110,98 @@
 
 功能卡共 24 张，玩家持有，主要用于干扰与辅助。
 
-- 赝品指控：强制使一个文物的价值 -2
-- 内幕消息：预看并重排牌库顶 2 张事件
-- 密标干扰：密封拍卖中强制 1 人先亮
-- 快速调包：将一张场上文物与牌堆顶文物交换
-- 修复捐献：弃此卡时空稳定性 +10%
-- 拍卖取消：取消当前拍卖
-- 强制交易：与一名玩家强制交易一个文物，价格固定为 10
-- 费用减免：本回合你的拍卖成交价 -3
-- 加价喊单：公开拍卖立刻提高当前价的 50%
-- 优先挑选：挖掘阶段多抽 1 留 1
-- 暗标窥探：偷看一份暗标
-- 孤注一掷：资金 <10 时可用，获得 10 临时资金（本回合可用）
-- 价格锚定：出价时打出，指定价格上限（需 > 当前价）；后续出价不得超过此上限
-- 静默协商：强制与一名玩家；你支付 5 资金，随机抽取其手牌中 1 张功能卡
-- 代投竞标：密封竞标中可握持两组筹码；亮出时选其中一组为有效出价，另一组收回
-- 倍率固锁：事件与投票阶段前使用；指定一个时代，本回合该时代倍率不可投票调整
-- 反向保价：出价时打出；最终拍得此文物的玩家获得成交价的 20% 补偿
-- 筹码置换：弃置任意数量功能卡并从牌堆顶抽取相同数量新卡；每回合限 1 次
-- 套装拼接：打出并附着在一张文物卡上；该文物在计算套装奖励时可视为任意时代
-- 分期付款：拍卖结算时仅支付成交价一半（向上取整）；代价：时空稳定性额外 -5%
-- 税务避风港：事件阶段使用；抵消一张事件卡对你的“支付资金”或“弃置文物”负面效果
-- 风向侦测：翻开事件卡前查看事件牌堆顶 3 张并按任意顺序放回
-- 暂借护送：交易阶段指定对手的一张文物；该文物本回合禁止出售给系统且禁止交易
-- 赎买协议：交易阶段从弃牌堆选择一张文物卡，支付其（基础价值 +5）资金购回
+破坏Build方向 (10张)
+
+此类卡牌旨在直接干扰对手的文物收集和套装组合策略。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **赝品指控** | 指定场上或任意玩家持有的一件文物，该文物的基础价值永久-2（最低为0）。 |
+| **快速调包** | 将拍卖区中的一张文物与牌堆顶文物交换（新文物立即翻开）。 |
+| **拍卖劫持** | 取消当前正在进行的拍卖，该文物进入弃牌堆，所有已出价金返还。 |
+| **强制征收** | 指定一名玩家，强制与其交换一件文物，交换价格固定为10资金（由你支付给对方）。 |
+| **文物封存** | 指定对手的一张文物，该文物本回合禁止出售、交易，且不计入套装奖励。 |
+| **套装破坏者** | 指定一名对手，查看其所有文物，选择其中一张强制其以半价出售给系统（向下取整）。 |
+| **收藏劫掠** | 指定一名玩家，从其手中随机抽取一张文物卡（需支付其5资金作为补偿）。 |
+| **时空置换** | 选择场上两名玩家（可包括自己），强制他们交换一件文物（双方各自选择要交换出去的文物）。 |
+| **伪造鉴定** | 指定任意玩家持有的一件文物，将其时代属性改为你制定的一个时代。 |
+| **黑市没收** | 本回合拍卖阶段结束时使用，选择本回合任意一名竞拍成功的玩家，将其刚获得的文物转移给你（需支付其成交价的80%，向上取整）。 |
+
+调整倍率方向 (7张)
+
+此类卡牌赋予玩家影响市场价格波动的能力，创造投机机会。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **倍率冲击** | 立即将指定一个时代的倍率上升或下降0.5（仍受×0.5到×2.5限制）。 |
+| **倍率固锁** | 在投票阶段前使用，指定一个时代，本回合该时代倍率不可通过投票调整。 |
+| **市场操纵** | 在投票阶段使用，你可以额外发起一次倍率调整提议（不占用正常提议次数）。 |
+| **倍率互换** | 立即交换任意两个时代的当前倍率值。 |
+| **事件预测** | 查看事件牌堆顶3张卡牌，按任意顺序放回。 |
+| **强制平衡** | 立即将所有时代倍率重置为×1.0。 |
+| **投票操控** | 在投票阶段使用，本回合你的每个投票标记（✅/❌）计为2票。 |
+
+操纵拍卖方向 (7张)
+
+此类卡牌专注于控制拍卖流程、获取信息优势以及改变竞价规则。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **密标窥探** | 密封竞标中，可以偷看一名玩家的出价筹码。 |
+| **密标干扰** | 密封竞标中，强制指定一名玩家提前亮出其出价（其他玩家随后亮出）。 |
+| **价格锚定** | 公开拍卖开始前使用，设定本次拍卖的价格上限（必须≥当前出价+3），后续所有出价不得超过此上限。 |
+| **费用减免** | 在你竞拍成功后使用，本次拍卖的成交价-5（最低为1）。 |
+| **恶意抬价** | 公开拍卖中使用，立即将当前出价提高50%（向上取整）。 |
+| **代理竞标** | 密封竞标中可握持两组筹码，亮出时选择其中一组为有效出价，另一组收回。 |
+| **拍卖情报** | 挖掘阶段使用，查看文物牌堆顶5张卡牌，选择其中任意张按任意顺序放置在拍卖区，其余放回牌堆底。 |
+
 
 ### 事件卡（Event Cards）
 
-注：除特殊注明外，若指定的**比较类型**无法分出大小，则依次比较资金，VP，若最终无法分出
+破坏Build方向 (8张)
 
-- 两极反转：立即交换当前倍率最高与最低时代的倍率值
-- 时空震荡：持有消耗总和最高者弃 1 件文物
-- 市场监管令：持有 4 件文物者罚款 5 资金
-- 颁布苛税：所有持有资金 >20 的玩家罚款 5 资金
-- 缉私警察：持有价值为 8 的文物的玩家罚款 5 资金
-- 制裁寡头：拥有最多VP的玩家罚款 5 资金
-- 旱地行舟：拥有最多金币的玩家下回合拍卖环节最高出价为 8
-- 环保主义：持有消耗总和最低者若手牌未满，可在系统仓库以文物原价值选择并购买一张文物
-- 多元主义：你的文物卡中每有一个不同的词条，你在本回合获得一个临时的VP
-- 危机缓和：时空稳定性 +10%
-- 灾难爆发：时空稳定性 -10%
-- 市场冻结：下回合禁止倍率调整和出售
-- 通胀：下回合公开拍卖成交价 +2
-- 通缩：下回合出售价格减半
-- 时空扭曲：每人传 1 张手牌或文物给下家
-- 时空回溯：从弃牌堆随机复原文物填满拍卖区
-- 时间悖论：时空稳定性 <30% 时，下回合所有拍卖改为密封竞标
-- 暗箱操作：下回合所有文物卡保持背面朝上，直到成交付款后方可翻开
-- 安保升级：下回合的拍卖阶段，禁止使用任何功能卡
-- 连锁抛售：持有文物数量 ≥3 的玩家，必须立即选择一张文物半价出售（向下取整），或支付 5 资金
-- 时间检修窗：下回合拍卖成交不扣减任何时空稳定性
-- 资本撤退：本回合所有拍卖的最高出价上限为 15，超过 15 的出价视为无效
-- 匿名资助：当前资金最少的玩家立即获得 10 资金（并列则平分，向下取整）
-- 终局预兆：若时空稳定性 <=20%，立即额外翻开并结算一张事件卡
-- 未雨绸缪：提前揭示下回合的事件与拍品
+此类事件旨在制造全局性的文物所有权变动，打破现有格局。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **时空震荡** | 持有文物消耗总和最高的玩家必须弃置1件文物到弃牌堆。 |
+| **时空扭曲** | 所有玩家同时将最左侧一张文物卡传递给下家（若无文物则跳过）。 |
+| **连锁抛售** | 持有文物数量≥3的所有玩家，必须立即选择一张文物半价出售给系统（向下取整）。|
+| **收藏审查** | 所有玩家展示其持有的所有文物，持有同一时代文物最多的玩家必须弃置该时代的1件文物。 |
+| **文物贬值** | 持有文物总数最多的玩家，其所有文物的基础价值在本回合出售时-2（最低为1）。 | 
+| **文物充公** | 所有持有传奇文物（价值为9）的玩家，每持有1件传奇文物需支付10资金，否则该文物被没收到弃牌堆。 |
+| **强制拍卖** | 从起始玩家开始，每位玩家必须选择自己的1件文物进行公开拍卖（起拍价为基础价值×当前倍率×0.5），原持有者也可参与竞拍。 |
+| **收藏洗牌** | 所有玩家将各自持有的文物卡牌面朝下洗混，然后按顺时针方向每人抽取与之前相同数量的文物（随机重新分配）。 |
+
+调整倍率方向 (8张)
+
+此类事件会引发剧烈的市场波动，考验玩家的应变和投机能力。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **两极反转** | 立即交换当前倍率最高与最低时代的倍率值。 |
+| **市场崩盘** | 立即将所有时代倍率各下降0.5（受×0.5下限限制）。 |
+| **市场繁荣** | 立即将所有时代倍率各上升0.5（受×2.5上限限制）。 |
+| **倍率锁定** | 下回合的投票阶段，禁止进行任何倍率调整投票。 |
+| **古代热潮** | 立即将古代时代倍率设置为×2.0，其他时代倍率各-0.5（受限制）。 |
+| **未来狂热** | 立即将未来时代倍率设置为×2.0，其他时代倍率各-0.5（受限制）。 |
+| **近代复兴** | 立即将近代时代倍率设置为×2.0，其他时代倍率各-0.5（受限制）。 |
+| **倍率竞价** | 从起始玩家开始，每位玩家可以支付5资金来指定一个时代的倍率上升0.5或下降0.5。 |
+
+操纵拍卖方向 (8张)
+
+此类事件直接改变下一回合的拍卖规则，迫使玩家调整竞拍策略。
+
+| 卡牌名称 | 效果描述 |
+| --- | --- |
+| **拍卖狂热** | 下回合所有公开拍卖的成交价+5。 |
+| **市场萧条** | 下回合所有拍卖的成交价-3（最低为1）。 |
+| **暗箱操作** | 下回合所有拍卖区的文物卡保持背面朝上进行密封拍卖，直到成交付款后方可翻开查看。 |
+| **密封强制** | 下回合所有拍卖改为密封竞标方式进行。 |
+| **公开强制** | 下回合所有拍卖改为公开拍卖方式进行。 |
+| **拍卖加速** | 下回合拍卖阶段，每次拍卖的最低加价改为3。 |
+| **功能禁令** | 下回合的拍卖阶段，所有玩家禁止使用任何功能卡。 |
+| **拍卖限价** | 下回合所有拍卖的最高出价上限为8，超过8的出价视为无效。 |
 
 ---
 
@@ -185,8 +223,6 @@
 - 投票标记
 - 文物
 - 功能卡（手牌）
-
-其中，每人能同时持有的文物卡最多数量为4张。如果一个玩家正在持有4张文物，则不能参加拍卖阶段，且在交易阶段中只能卖出文物卡。
 
 ---
 
@@ -244,12 +280,6 @@
 - 系统仓库清空
 
 **特殊规则**
-
-持有上限限制
-
-- 持有4张文物的玩家不能参与回购拍卖的竞价
-- 但仍可以在轮到自己时选择拍卖标的(为其他玩家创造机会)
-- 若所有玩家都持有4张文物,跳过回购拍卖,所有文物直接进入弃牌堆
 
 功能卡使用
 
